--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,6 +1,14 @@
 workflows:
   build:
     name: Build
+    environment:
+      vars:
+        ALLOW_DRAFT_PR: false
+    triggering:
+      events:
+        - pull_request
+    when:
+      condition: env.ALLOW_DRAFT_PR == true or event.pull_request.draft == false 
     scripts:
       - echo "Build"
 
