--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,10 +1,9 @@
 workflows:
   build:
     environment:
-      # ndk: r22b
+      ndk: r22b
       xcode: 13.2
     name: Build
     scripts:
       - echo "Build"
-      - /usr/local/share/android-sdk/tools/bin/sdkmanager 'ndk;22.1.7171670' > /dev/null
 
