--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,10 +1,14 @@
 workflows:
   build:
     name: Build
+    environment:
+      vars:
+        ALLOW_DRAFT_PR: false
+    triggering:
+      events:
+        - pull_request
+    when:
+      condition: env.ALLOW_DRAFT_PR == true or event.pull_request.draft == false 
     scripts:
-      - name: Run build and return license
-        script: |
-          set +e # no exit on fail
-          ./build.sh
-          ./return-license.sh
+      - echo "Build"
 
