--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,12 +3,12 @@ workflows:
     name: Build
     environment:
       vars:
-        ALLOW_DRAFT_PR: yes
+        ALLOW_DRAFT_PR: 1
     triggering:
       events:
         - pull_request
     when:
-      condition: env.ALLOW_DRAFT_PR == true or event.pull_request.draft == false 
+      condition: env.ALLOW_DRAFT_PR == '1' or event.pull_request.draft == false 
     scripts:
       - echo "Build I"
 
