--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -10,5 +10,5 @@ workflows:
     when:
       condition: env.ALLOW_DRAFT_PR == 'True' or event.pull_request.draft == false 
     scripts:
-      - echo "Build emacs"
+      - echo "Build vi"
 
