--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -11,7 +11,8 @@ workflows:
       changeset:
         includes:
           - foobar.txt
-      condition: env.ALLOW_DRAFT_PR == 'True' or event.pull_request.draft == false
+      condition:
+# env.ALLOW_DRAFT_PR == 'True' or event.pull_request.draft == false
     scripts:
       - echo "Build emacs"
 
