--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -8,7 +8,7 @@ workflows:
       events:
         - pull_request
     when:
-      condition: event.pull_request.draft == false
+      condition: event.pull_request.draft == true
     scripts:
       - script: echo "Run for draft pull request"
         when:
