--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,6 +1,6 @@
 workflows:
   build:
-    name: Build for draft pull request
+    name: Build for draft pull request wh
     instance_type: linux
     environment:
       vars:
