--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,6 +1,6 @@
 workflows:
   build:
-    name: Build for draft pull request wh
+    name: Build for draft pull request
     instance_type: mac_mini
     environment:
       vars:
