--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,26 +1,7 @@
 workflows:
-  build:
-    name: Build for draft pull request
-    instance_type: linux_x2
-    environment:
-      vars:
-        FOO: BAR
-    triggering:
-      events:
-        - pull_request
-    when:
-      condition: event.pull_request.draft == true
+  lint:
+    name: Lint
+    instance_type: mac_pro
     scripts:
-      - script: echo "Run for draft pull request"
-        when:
-          condition: event.pull_request.draft
-      - script: echo "Run FOO is BAR"
-        when:
-          condition: baz.env.FOO == 'BAR'
-      - script: echo "Run FOO is not BAR"
-        when:
-          condition: env.FOO != 'BAR'
-      - script: echo "Run FOO is not BAZ"
-        when:
-          condition: env.FOO != 'BAZ'
+      - ktlint
 
