--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,6 +2,9 @@ workflows:
   build:
     name: Node.js and npm
     instance_type: windows_x2
+    environment:
+      node: 16.14.0
+      npm: 8.3.1
     scripts:
       - node --version
       - npm --version
