Revert "Use defaults"
This reverts commit 0a7485bc4033813dc5b1df06f71447ba2727fef7.

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,6 +2,9 @@ workflows:
   build:
     name: Node.js and npm
     instance_type: windows_x2
+    environment:
+      node: 12
+      npm: 7
     scripts:
       - node -v
       - npm -v
