--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,6 +1,9 @@
 workflows:
   build:
     name: Build
+    triggering:
+      events:
+        - pull_request
     scripts:
       - echo "Build ;)"
 
