--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,6 +3,8 @@ workflows:
     instance_type: mac_mini_m1
     scripts:
       - wget https://api.codemagic.io/artifacts/7fe7c633-55c1-45f7-b7e5-39b2265f5cc9/ee71d440-4eae-40b7-a1a4-0a7254549617/app-debug.apk -O /tmp/android.apk
+    scripts:
+      - echo 'Priority'
     artifacts:
       - /tmp/android.apk
 
