--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,11 @@ jobs:
     steps:
       - name: Trigger Codemagic build on Push
         id: build
-        uses: artemii-yanushevskyi/codemagic-build@v1.0.2
+        uses: artemii-yanushevskyi/codemagic-build@v1.0.3
         with:
           app-id: 6107a6c1f16addeb3d113a32
           workflow-id: empty
+          token: ${{ secrets.CODEMAGIC_API_TOKEN }}
       - name: Build started
         run: echo "Build ${{ steps.build.outputs.build-id }} started"
 
