--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,6 @@ jobs:
           app-id: 6107a6c1f16addeb3d113a32
           workflow-id: empty
           token: ${{ secrets.CODEMAGIC_API_TOKEN }}
+      - name: Environment
+        run: echo "console.log(process.env)" | node -
 
