--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,5 @@ jobs:
         run: |
           curl ${{ steps.build.outputs.build-api-url }} \
             -H 'Content-Type: application/json' \
-            -H 'X-Auth-Token: ${{ secrets.CODEMAGIC_API_TOKEN }}'
+            -H 'X-Auth-Token: ${{ secrets.CODEMAGIC_API_TOKEN }}' | jq .
 
