--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,15 @@ jobs:
           app-id: 6107a6c1f16addeb3d113a32
           workflow-id: empty
           token: ${{ secrets.CODEMAGIC_API_TOKEN }}
+          xcode: 12.5
+          labels: |
+            github
+            qa
+        env:
+          CM_FOO: bar
       - name: Get build information
         run: |
           curl ${{ steps.build.outputs.build-api-url }} \
             -H 'Content-Type: application/json' \
-            -H 'X-Auth-Token: ${{ secrets.CODEMAGIC_API_TOKEN }}' | jq .
+            -H 'X-Auth-Token: ${{ secrets.CODEMAGIC_API_TOKEN }}' | jq .build
 
