--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,6 +1,9 @@
 workflows:
   build:
     name: Build
+    environment:
+      vars:
+        UNAVAILABLE: $FOO
     triggering:
         events:
             - pull_request
