--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,7 @@
 workflows:
   build:
     name: Build
-    max_build_duration: 1
+    max_build_duration: 3
     scripts:
-      - sleep 1
+      - echo build
 
