--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,5 +1,10 @@
 workflows:
   empty:
     name: Empty
+    triggering:
+      events:
+        - tag
+      tag_patterns:
+        - pattern: "v+([0-9]).+([0-9]).+([0-9])"
     scripts:
-      - echo
+      - echo tag build
