--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -6,5 +6,5 @@ workflows:
         events:
             - pull_request
     scripts:
-      - echo "Check if merge"
+      - echo "Check if merges for PR"
 
