--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,7 @@
 workflows:
   build:
     name: Build
-    instance_type: mac_mini_m1
+    instance_type: linux
     max_build_duration: 3
     triggering:
       events:
