--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,6 +2,8 @@ workflows:
   build:
     name: Secret
     instance_type: mac_mini_m1
+    environment:
+      groups: ['super-secret-group']
     scripts:
       - echo "It's my $SUPER_SECRET"
 
