--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,7 @@
 workflows:
   build:
-    name: Secrets
-    instance_type: mac_mini_m1
+    name: Mac mini M2
+    instance_type: mac_mini_m2
     environment:
       vars:
         ENCRYPTED_SUPER_SECRET: Encrypted(Z0FBQUFBQmtPUXNtQVlpdTJvd25TbV9hdm1namNKUHpuMUZIMVRPRWxkRFZqY1NGRmI2TzRfZTZCUGFwU1BOLVB2cVRzZEV0WVVmZThBbUtNZDBGdGprRGZBaTF4ZEJMelFXS1N1M1Jucy04U2E1OURucEFzMGs9)
@@ -9,6 +9,7 @@ workflows:
         - app-super-secret
         - team-super-secret
     scripts:
+      - echo "Hello from Mac mini M2"
       - echo "It's my app super secret $APP_SUPER_SECRET"
       - echo "It's my team super secret $TEAM_SUPER_SECRET"
       - echo "It's my encrypted super secret $ENCRYPTED_SUPER_SECRET"
