--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,10 +1,10 @@
 workflows:
   build:
-    name: Mac mini M2
-    instance_type: mac_mini_m2
+    name: Mac mini M1
+    instance_type: mac_mini_m1
     environment:
       vars:
-        ENCRYPTED_SUPER_SECRET: Encrypted(Z0FBQUFBQmtPUXNtQVlpdTJvd25TbV9hdm1namNKUHpuMUZIMVRPRWxkRFZqY1NGRmI2TzRfZTZCUGFwU1BOLVB2cVRzZEV0WVVmZThBbUtNZDBGdGprRGZBaTF4ZEJMelFXS1N1M1Jucy04U2E1OURucEFzMGs9)
+#       ENCRYPTED_SUPER_SECRET: Encrypted(Z0FBQUFBQmtPUXNtQVlpdTJvd25TbV9hdm1namNKUHpuMUZIMVRPRWxkRFZqY1NGRmI2TzRfZTZCUGFwU1BOLVB2cVRzZEV0WVVmZThBbUtNZDBGdGprRGZBaTF4ZEJMelFXS1N1M1Jucy04U2E1OURucEFzMGs9)
       groups: 
         - app-super-secret
 #       - team-super-secret
