--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,7 @@
 workflows:
   unity:
     name: Unity
-    instance_type: mac_mini_m1
+    instance_type: windows_x2
     environment:
       unity: 2020.3.41f1
     scripts:
