--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,7 @@
 workflows:
   disk_size:
     name: Disk size
-    instance_type: linux
+    instance_type: linux_test
     scripts:
       - df -h .
       - sleep 1
