--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,7 @@
 workflows:
   build:
-    name: Build for draft pull request (prod)
-    instance_type: mac_mini
+    name: Build for draft pull request
+    instance_type: mac_mini_m1
     environment:
       vars:
         FOO: BAR
