--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,6 +1,6 @@
 workflows:
   exit-code:
     name: Exit code
-    instance_type: linux_x2
+    instance_type: mac_mini_m1
     scripts:
       - return 1 # return non-zero exit code
