Add env variables

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,6 +3,11 @@ workflows:
     name: Keystores
     environment:
       android_signing:
-          - artemiis-keystore
+        - keystore: artemiis-keystore
+          keystore_environment_variable: THIS_KEYSTORE_PATH_ON_DISK_1
+          keystore_password_environment_variable: THIS_KEYSTORE_PASSWORD_1
+          key_alias_environment_variable: THIS_KEY_ALIAS_1
+          key_password_environment_variable: THIS_KEY_PASSWORD_1
     scripts:
       - echo "Keystores"
+    
