--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -7,7 +7,8 @@ workflows:
         - push
     scripts:
       - printenv
-      - cat binary_blob.sha256
+      - cat binary_blob.sha256 || true
+      - shasum -a 256 -c binary_blob.sha256 || true
       - dd if=/dev/urandom of=binary_blob.bin bs=1M count=100
       - shasum -a 256 binary_blob.bin > binary_blob.sha256
       - cat binary_blob.sha256
