--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,7 @@
 workflows:
   cache:
     name: Cache
-    instance_type: linux_x2
+    instance_type: mac_mini_m1
     triggering:
       events:
         - push
