--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,3 +5,6 @@ workflows:
       - echo "Test" > artifact.txt
     artifacts:
       - /Users/builder/clone/artifact.txt
+    publishing:
+      tester_groups:
+        - beta_testers
