--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,8 +5,8 @@ workflows:
       - name: Prepare
         script: |
           counter=1
-          while [ $counter -le 10 ]; do
-              echo "Prepare: $counter"
+          while [ $counter -le 20 ]; do
+              echo "Prepare: $counter/20"
               ((counter++))
           done
       - name: Logs
