--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,5 +3,10 @@ workflows:
     name: Time sync
     instance_type: windows_x2
     scripts:
-      - w32tm /resync
+      - echo "==> Checking current time synchronization status..."
+      - w32tm /query /status || echo "Failed to query time status. Continuing to resync."
+      - echo "==> Synchronizing system time..."
+      - w32tm /resync || echo "Time synchronization failed. Investigating further required."
+      - echo "==> Verifying updated time synchronization status..."
+      - w32tm /query /status || echo "Verification failed. Please check system configuration."
 
